--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 [dependencies]
 util = { path = "../../utility/util" }
 walkdir = "2"
+serde = { version = "1.0.104", features = ["derive"] }
+serde_json = "1.0"
