--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ util = { path = "../../utility/util" }
 walkdir = "2"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0"
+itertools = "0.10.0"
+chrono = "0.4.19"
